:bug: footer alignment issues

--- a/src/_assets/scss/components/sections/_bofu-form.scss
+++ b/src/_assets/scss/components/sections/_bofu-form.scss
@@ -15,7 +15,9 @@
         }
 
         .text-center {
-            @extend .mx-auto;
+            @extend .d-block;
+            
+            width: 100%;
         }
     }
 
